PolSourceTasks/src/objects/SalesBeginning__c.object
<CustomObject>
	<customSettingsType>List</customSettingsType>
	<fields>
		<fullName>SalesActive__c</fullName>
		<defaultValue>false</defaultValue>
		<label>SalesActive</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>SalesEnd__c</fullName>
		<label>SalesEnd</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>SalesStart__c</fullName>
		<label>SalesStart</label>
		<type>DateTime</type>
	</fields>
	<label>SalesBeginning</label>
</CustomObject>